--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -3,6 +3,27 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
+
+<div class="field">
+    <%= f.label :姓 %><br />
+    <%= f.text_field :name_last, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :名 %><br />
+    <%= f.text_field :name_first, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :セイ %><br />
+    <%= f.text_field :name_kana_last, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :メイ %><br />
+    <%= f.text_field :name_kana_first, autofocus: true %>
+  </div>
+
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
