--- a/app/views/workers/registrations/new.html.erb
+++ b/app/views/workers/registrations/new.html.erb
@@ -4,6 +4,26 @@
   <%= devise_error_messages! %>
 
   <div class="field">
+    <%= f.label :姓 %><br />
+    <%= f.email_field :name_last, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :名 %><br />
+    <%= f.email_field :name_first, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :セイ %><br />
+    <%= f.email_field :name_kana_last, autofocus: true %>
+  </div>
+
+  <div class="field">
+    <%= f.label :メイ %><br />
+    <%= f.email_field :name_kana_first, autofocus: true %>
+  </div>
+
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
