--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the top controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
+.header {
+  margin-top: 0;
+  text-align: center;
+  background-color: #d09b98;
+
+  h1{
+    margin-top: 0;
+    padding: 20px;
+  }
+}
+
+.navi{
+  text-align: center;
+}
