--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -4,9 +4,8 @@
 
   <div class="navi">
   <p>
-    <%= link_to '学生の方の新規登録', new_student_registration_path %>&nbsp;&nbsp;&nbsp;
-    <%= link_to '社会人の方の新規登録', new_worker_registration_path %>&nbsp;&nbsp;&nbsp;
-    <%= link_to '学生の方のログアウト', destroy_student_session_path %>&nbsp;&nbsp;&nbsp;
-    <%= link_to '社会人の方のログアウト', destroy_worker_session_path %>
+
+    <%= link_to '学生のログアウト', destroy_student_session_path, method: :delete %>&nbsp;&nbsp;&nbsp;
+    <%= link_to '社会人のログアウト', destroy_worker_session_path, method: :delete %>
     </p>
   </div>
