カラム名変更 ログイン機能一通り終了

--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -1,27 +1,32 @@
+<div class="student_registration">
+
 <h2>学生の新規登録</h2>
+
+<p>
+<%= render "students/shared/links" %>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
 
   <div class="field">
-    <%= f.label :name_last %><br />
-    <%= f.text_field :name_last, autofocus: true %>
+    <%= f.label :family_name %><br />
+    <%= f.text_field :family_name, autofocus: true %>
   </div>
 
   <div class="field">
-    <%= f.label :name_first %><br />
-    <%= f.text_field :name_first, autofocus: true %>
+    <%= f.label :first_name %><br />
+    <%= f.text_field :first_name, autofocus: true %>
   </div>
 
   <div class="field">
-    <%= f.label :name_kana_last %><br />
-    <%= f.text_field :name_kana_last, autofocus: true %>
+    <%= f.label :family_name_kana %><br />
+    <%= f.text_field :family_name_kana, autofocus: true %>
   </div>
 
   <div class="field">
-    <%= f.label :name_kana_first %><br />
-    <%= f.text_field :name_kana_first, autofocus: true %>
+    <%= f.label :first_name_kana %><br />
+    <%= f.text_field :first_name_kana, autofocus: true %>
   </div>
 
   <div class="field">
@@ -32,7 +37,7 @@
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    (<%= @minimum_password_length %> 文字以上)
     <% end %><br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
@@ -47,4 +52,5 @@
   </div>
 <% end %>
 
-<%= render "students/shared/links" %>
+  </p>
+  </div>
