全体のnavbarの基礎完成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,24 @@
  *= require_tree .
  *= require_self
  */
+
+
+.top_navi{
+  background-color: #d09b98;
+  padding: 10px;
+  text-align: center;
+
+  img{
+    width: 35px;
+    float: left;
+  }
+  h1{
+    display: inline;
+    text-align: center;
+    font-size: 30px;
+  }
+  p{
+    float: right;
+    line-height: 30px
+  }
+}
