--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -4,17 +4,15 @@
 
 
 
-.header {
-  margin-top: 0;
-  text-align: center;
-  background-color: #d09b98;
+// .header {
+//   margin-top: 0;
+//   text-align: center;
 
-  h1{
-    margin-top: 0;
-    padding: 20px;
-  }
-}
 
-.navi{
-  text-align: center;
-}
+//   h1{
+//     margin-top: 0;
+//     padding: 20px;
+//     background-color: #d09b98;
+//   }
+// }
+
