--- a/app/views/workers/registrations/new.html.erb
+++ b/app/views/workers/registrations/new.html.erb
@@ -2,6 +2,9 @@
 
 <h2>社会人の新規登録</h2>
 
+<%= link_to '導入ページに戻る', introduction_index_path %>
+
+
 <%= render "workers/shared/links" %>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
