--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -4,15 +4,14 @@
 
 
 
-// .header {
-//   margin-top: 0;
-//   text-align: center;
+.recomend_users{
 
 
-//   h1{
-//     margin-top: 0;
-//     padding: 20px;
-//     background-color: #d09b98;
-//   }
-// }
+  .recomend_user{
+  background-color: #f1f3f1;
+  padding: 20px 0 40px;
+  margin: 30px 100px;
+  }
+
+}
 
