--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,20 @@
   padding: 10px 20px 10px 10px;
   text-align: center;
 
+  a{
+    text-decoration: none;
+
+  &:link{
+        color: #312f2d;
+      }
+  &:visited{
+        color: #312f2d;
+      }
+  &:hover{
+        color: #312f2d;
+      }
+    }
+
   img{
     width: 35px;
     float: left;
@@ -44,8 +58,13 @@
       &:hover{
         color: #fff;
       }
+      img{
+        border-radius: 100%;
+      }
+
     }
 
   }
 
 }
+
