--- a/app/assets/stylesheets/user_pages.scss
+++ b/app/assets/stylesheets/user_pages.scss
@@ -1,9 +1,21 @@
-.user_name{
-  text-align: center;
-  .kanji{
+.user_info{
+  margin-top: 50px;
 
+  .avatar{
+    text-align: center;
+    img{
+      width: 100px;
+      border-radius: 100%;
+    }
   }
-  .kana{
 
+  .user_name{
+    text-align: center;
+    .kanji{
+
+    }
+    .kana{
+
+    }
   }
 }
