--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,17 +13,30 @@
     <%= link_to image_tag('logos/black_square.png'), root_path %>
   </span>
   <span id="navi_words">
-    <h1>Tunageru</h1>
+
+    <a href="<%= root_path %>"><h1>Tunageru</h1></a>
     <p>
-    <% if student_signed_in? %>
-      <%= link_to "マイページ", student_path(current_student) %>
-      <%= link_to "(編集)", edit_student_path(current_student) %>&nbsp;&nbsp;&nbsp;
-      <%= link_to '学生のログアウト', destroy_student_session_path, method: :delete %>
-    <% elsif worker_signed_in? %>
-      <%= link_to "マイページ", worker_path(current_worker) %>
-      <%= link_to "(編集)", edit_worker_path(current_worker) %>&nbsp;&nbsp;&nbsp;
-      <%= link_to '社会人のログアウト', destroy_worker_session_path, method: :delete %>
-    <% end %>
+      <% if student_signed_in? %>
+        <a href="<%= student_path(current_student) %>">
+          <% if current_student.avatar_file_name %>
+            <img src="<%= current_student.avatar.url(:medium)%>">&nbsp;&nbsp;&nbsp;
+          <% end %>
+          <%= current_student.name %>
+        </a>
+        &nbsp;
+        <%= link_to "(編集)", edit_student_path(current_student) %>&nbsp;&nbsp;&nbsp;
+        <%= link_to '学生のログアウト', destroy_student_session_path, method: :delete %>
+      <% elsif worker_signed_in? %>
+        <a href="<%= worker_path(current_worker) %>">
+          <% if current_worker.avatar_file_name %>
+            <img src="<%= current_worker.avatar.url(:medium)%>">&nbsp;&nbsp;&nbsp;
+          <% end %>
+          <%= current_worker.name %>
+        </a>
+        &nbsp;
+        <%= link_to "(編集)", edit_worker_path(current_worker) %>&nbsp;&nbsp;&nbsp;
+        <%= link_to '社会人のログアウト', destroy_worker_session_path, method: :delete %>
+      <% end %>
     </p>
   </span>
 </div>
