--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,3 +1,9 @@
+<div class="user_info">
+  <div class="avatar">
+    <% if @student.avatar_file_name %>
+      <img src="<%= @student.avatar.url(:medium) %>">
+    <% end %>
+  </div>
   <div class="user_name">
     <div class="kanji">
       <h2><%= @student.name %></h2>
@@ -6,3 +12,4 @@
       <p><%= @student.name_kana %></p>
     </div>
   </div>
+</div>
