--- a/app/views/workers/edit.html.erb
+++ b/app/views/workers/edit.html.erb
@@ -1,5 +1,10 @@
 <%= form_for current_worker do |f| %>
 
+  <h2>プロフィール画像</h2>
+    <div class="form-group file">
+      <%= f.file_field :avatar, class: "form-control floating-label", placeholder: "画像アップロード" %>
+    </div>
+
   <h2>登録情報</h2>
 
   <%= f.text_field :family_name, placeholder: "姓", class: "form-control" %>
