--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,9 @@
  *= require_tree .
  *= require_self
  */
-
+body{
+  color: #312f2d;
+}
 
 .top_navi{
   background-color: #d09b98;
@@ -41,6 +43,7 @@
   }
   h1{
     display: inline;
+    margin-left: 170px;
     text-align: center;
     font-size: 30px;
   }
