--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -4,6 +4,32 @@
 
 
 
+.recomend_top_comment{
+  text-align: center;
+
+  h3{
+    // background-color: #d09b98;
+    color: #d09b98;
+    padding: 10px;
+    margin: 20px auto 60px;
+    width: 500px;
+    // border-radius: 10px;
+    border-style: solid;
+  }
+
+  p{
+    font-size: 20px;
+    background-color: #f1f3f1;
+    padding: 10px;
+    margin: 0 auto ;
+    width: 400px;
+    // border-radius: 10px;
+
+  }
+}
+
+
+
 .recomend_users{
 
 
