--- a/app/views/workers/edit.html.erb
+++ b/app/views/workers/edit.html.erb
@@ -15,6 +15,14 @@
 
   <%= f.text_field :first_name_kana, placeholder: "メイ", class: "form-control" %>
 
+  <%= f.text_field :email, placeholder: "メールアドレス", class: "form-control" %>
+
+  <%= f.text_field :sex, placeholder: "性別", class: "form-control" %>
+
+
+
+
+
   <%= f.submit "送信", class: "btn btn-primary withripple" %>
 
 <% end %>
