--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
         </a>
         &nbsp;
         <%= link_to "(編集)", edit_student_path(current_student) %>&nbsp;&nbsp;&nbsp;
-        <%= link_to '学生のログアウト', destroy_student_session_path, method: :delete %>
+        <%= link_to 'ログアウト', destroy_student_session_path, method: :delete %>
       <% elsif worker_signed_in? %>
         <a href="<%= worker_path(current_worker) %>">
           <% if current_worker.avatar_file_name %>
@@ -35,7 +35,7 @@
         </a>
         &nbsp;
         <%= link_to "(編集)", edit_worker_path(current_worker) %>&nbsp;&nbsp;&nbsp;
-        <%= link_to '社会人のログアウト', destroy_worker_session_path, method: :delete %>
+        <%= link_to 'ログアウト', destroy_worker_session_path, method: :delete %>
       <% end %>
     </p>
   </span>
