ちょっとmessageについても入ってる

--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -32,11 +32,9 @@
 
       <%= f.text_field :university, placeholder: "大学名", class: "form-control form-university" %>
 
-      <%= f.text_field :company, placeholder: "勤務先名", class: "form-control form-company" %>
+      <%= f.text_field :industry_interested, placeholder: "志望業界", class: "form-control form-industry" %>
 
-      <%= f.text_field :industry_interested, placeholder: "業界", class: "form-control form-industry" %>
-
-      <%= f.text_field :job_category_interested, placeholder: "職種", class: "form-control form-job" %>
+      <%= f.text_field :job_category_interested, placeholder: "興味のある職種", class: "form-control form-job" %>
 
       <%= f.text_area :introduce, placeholder: "自己紹介", class: "form-control form-introduce" %>
 
