--- a/app/views/message_rooms/show.html.erb
+++ b/app/views/message_rooms/show.html.erb
@@ -1,3 +1,10 @@
   <h2>メッセージ</h2>
 
-  <%= render partial: "message", collection: @
+
+  <% if student_signed_in? %>
+  <%= @worker.name %>とのメッセージ
+
+  <% elsif worker_signed_in? %>
+  <%= @student.name %>とのメッセージ
+
+  <% end %>
