--- a/app/views/workers/registrations/new.html.erb
+++ b/app/views/workers/registrations/new.html.erb
@@ -7,6 +7,10 @@
 
 <%= render "workers/shared/links" %>
 
+
+<%= link_to 'facebook認証', worker_omniauth_authorize_path(:facebook) %>
+
+
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
